fix:gap style

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -130,7 +130,7 @@ form {
     justify-content: center;
     width: 100%;
     margin-top: 6px;
-    gap: 12px;
+    gap: 25px;
 }
 
 .gsi-material-button {
@@ -236,7 +236,7 @@ form {
 
 .gsi-material-button:not(:disabled):hover {
     -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
-    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+    box-shadow: 0 1px 2px 0 rgba(95, 102, 107, 0.3), 0 1px 3px 1px rgba(60, 64, 67, .15);
 }
 
 .gsi-material-button:not(:disabled):hover .gsi-material-button-state {
